@@ -1,3 +1,11 @@
+2002-09-24 13:22  Alexander Malmberg  <alexander@malmberg.org>
+
+	* Source/x11/XWindowBuffer.m (+windowBufferForWindow:depthInfo:):
+	Detect and handle errors properly. Only use shared memory for
+	reasonably large windows.
+
+	(-needsAlpha): Make data isn't NULL before trying to do anything.
+
 2002-09-23 19:30  Alexander Malmberg  <alexander@malmberg.org>
 
 	* Source/art/ftfont.m (-initWithFontName:matrix:): Retain
